# DryPipe

./: .gitignore  .readthedocs.yaml  MANIFEST.in  README.md  license.txt  setup.cfg  setup.py
docs/: requirements.txt
dry_pipe/: __init__.py  actions.py  bash.py  cli  cli.py  cli_console.py  cli_screen.py  core_lib.py  env_variables.py  internals.py  janitors.py  monitoring.py  pipeline.py  pipeline_instance.py  pipeline_runner.py  pipeline_state.py  pubsub.py  pubsub_messages.py  script_commands.py  script_lib.py  server.py  service.py  slurm_adapter.py  slurm_array_task.py  ssh_executer.py  state_file.py  state_file_tracker.py  state_machine.py  task.py  task_lib.py  task_process.py  task_state.py  ui_janitor.py  utils.py  websocket_server.py
tests/: aggregate_task_tests.py  base_pipeline_test.py  base_tests.py  cli_tests.py  dsl_tests.py  exportable_funcs.py  ground_level_tests.py  mockups.py  pipeline_for_ssh_crash_recovery_tests.py  pipeline_tests_with_local_slurm.py  pipeline_tests_with_multiple_tasks.py  pipeline_tests_with_remote_slurm_arrays.py  pipeline_tests_with_single_tasks.py  pipeline_tests_with_slurm.py  pipeline_tests_with_slurm_arrays.py  pipeline_tests_with_slurm_mockup.py  pipeline_with_code_and_container_upsync.py  pipeline_with_complex_task_groups.py  pipeline_with_crashing_tasks.py  pipeline_with_dependency_on_other_pipeline.py  pipeline_with_dynamic_dag.py  pipeline_with_file_and_var_output.py  pipeline_with_kwargs_consuming_task.py  pipeline_with_multistep_tasks.py  pipeline_with_multistep_tasks_with_shared_vars.py  pipeline_with_test_cases.py  (+34 more)
(+67 files in other folders)
