[metadata]
name = DryPipe
author = Maxime Lévesque
author_email = maxime.levesque@gmail.com
description = A Python DSL for bioinformatics pipelines
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/calculs-ca/DryPipe
project_urls =
    Bug Tracker = https://github.com/calculs-ca/DryPipe/issues
    Documentation = https://drypipe.readthedocs.io
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]

packages=find_packages(include=['dry_pipe'])

python_requires = >=3.8
